[package]
name = "hello-rhino"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-launch = "0.5.0"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
open = "5.3.1"

[target.'cfg(not(any( all(target_arch = "aarch64", target_os = "linux"), target_arch = "arm" )))'.dependencies]
iced = { version = "0.13.1", default-features = false, features = ["tokio", "wgpu", "image"] }

[target.'cfg(any(all(target_arch = "aarch64", target_os = "linux"), target_arch = "arm"))'.dependencies]
# Use 'tiny-skia' renderer in iced
iced = { version = "0.13.1", default-features = false, features = ["tokio", "tiny-skia", "image"] }

[profile.release]
lto = "fat"
