[package]
name = "hello-rhino"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-launch = "0.5.0"
open = "5.3.1"
tr = { version = "0.1.10", features = ["gettext-rs"] }

# tiny-skia is much smaller than wgpu.
iced = { version = "0.13.1", default-features = false, features = ["tiny-skia", "image"] }

[dependencies.image]
version = "*"
default-features = false
features = ["png"]

[profile.release]
lto = "fat"
strip = true
